--- a/index.html
+++ b/index.html
@@ -22,11 +22,41 @@
 <body>
   <div id="cursor__highlight"></div>
 
+  <!-- LOADER -->
+  <div aria-label="Orange and tan hamster running in a metal wheel" role="img" class="wheel-and-hamster"
+    id="wheel-and-hamster">
+    <div class="wheel"></div>
+    <div class="hamster">
+      <div class="hamster__body">
+        <div class="hamster__head">
+          <div class="hamster__ear"></div>
+          <div class="hamster__eye"></div>
+          <div class="hamster__nose"></div>
+        </div>
+        <div class="hamster__limb hamster__limb--fr"></div>
+        <div class="hamster__limb hamster__limb--fl"></div>
+        <div class="hamster__limb hamster__limb--br"></div>
+        <div class="hamster__limb hamster__limb--bl"></div>
+        <div class="hamster__tail"></div>
+      </div>
+    </div>
+    <div class="spoke"></div>
+  </div>
+
   <!-- HEADER -->
   <header class="headerTop" id="header">
-    <div class="header__name">Charles Adrian</div>
-    <div class="header__program">BS Civil Engineering</div>
-    <p class="header__bio">Future engineer shaping tomorrow's skylines.</p>
+    <div class="header__" style="display: flex; align-items: center; gap: 3%;">
+      <img src="/assets/images/profile.webp" alt="profile" class="profilepng" loading="lazy">
+
+      <div class="profile__inf">
+        <div class="header__name">Charles Adrian B. Flores</div>
+        <div class="header__program">BS Civil Engineering</div>
+      </div>
+    </div>
+
+    <div class="biot">
+      <p class="header__bio" style="margin-top: 2.5em;">Future engineer shaping tomorrow's skylines.</p>
+    </div>
 
     <nav>
       <ul class="nav__links">
@@ -351,7 +381,8 @@
         <li class="project__item" style="position: relative;">
           <a href="https://fcu-darwin1223-24.vercel.app/" target="_blank"
             style="text-decoration: none; cursor: pointer; ">
-            <img src="/assets/images/Project1.png" alt="Generated Image" class="project__image">
+            <img src="/assets/images/Project1.png" alt="Project/Experience Card | Charles Adrian"
+              class="project__image">
             <div class="card-content">
               <h2 class="card-title">Darwin's Memoir</h2>
               <div class="dividerh"></div>
@@ -369,7 +400,8 @@
         <li class="project__item" style="position: relative;">
           <a href="https://www.playbook.com/s/litrato-by-charles/beyeCiXNqqBAdEWHDcTEW1nu" target="_blank"
             style="text-decoration: none; cursor: pointer; ">
-            <img src="/assets/images/Project2.jpg" alt="Generated Image" class="project__image">
+            <img src="/assets/images/Project2.jpg" alt="Project/Experience Card | Charles Adrian"
+              class="project__image">
             <div class="card-content">
               <h2 class="card-title">Pre-Debut Photoshoot</h2>
               <div class="dividerh"></div>
@@ -388,7 +420,7 @@
         <!-- 
         <li class="project__item">
 
-          <img src="/Port/assets/images/Project3.jpg" alt="Generated Image" class="project__image">
+          <img src="/assets/images/Project3.jpg" alt="Project/Experience Card | Charles Adrian" class="project__image">
           <div class="card-content">
             <h2 class="card-title">Pre-Debut Photoshoot</h2>
             <p class="card-description">This is a sample card description.</p>
@@ -411,7 +443,8 @@
 
           <a href="#" target="_blank" style="text-decoration: none; cursor: pointer;">
 
-            <img src="/assets/images/Experience3.jpg" alt="Generated Image" class="project__image">
+            <img src="/assets/images/Experience3.jpg" alt="Project/Experience Card | Charles Adrian"
+              class="project__image">
             <div class="card-content">
               <h2 class="card-title">CapSU Intramurals '24</h2>
               <div class="dividerh"></div>
@@ -429,7 +462,8 @@
         <li class="project__item" style="position: relative;">
           <a href="https://www.facebook.com/thehillsidecho/posts/930408055751910?rdid=rUdphPdoY7dofmKH" target="_blank"
             style="text-decoration: none; cursor: pointer;">
-            <img src="/assets/images/Experience1.jpg" alt="Generated Image" class="project__image">
+            <img src="/assets/images/Experience1.jpg" alt="Project/Experience Card | Charles Adrian"
+              class="project__image">
             <div class="card-content">
               <h2 class="card-title">3rd Place – The Hillside Echo Photography Contest</h2>
               <div class="dividerh"></div>
@@ -451,7 +485,8 @@
           <a href="https://www.facebook.com/fcuthes/posts/718351036979716" target="_blank"
             style="text-decoration: none; cursor: pointer;">
 
-            <img src="/assets/images/Experience2jpg.jpg" alt="Generated Image" class="project__image">
+            <img src="/assets/images/Experience2jpg.jpg" alt="Project/Experience Card | Charles Adrian"
+              class="project__image">
             <div class="card-content">
               <h2 class="card-title">119th Foundation Anniversary</h2>
               <div class="dividerh"></div>
@@ -469,7 +504,7 @@
         <!-- FIREGUARD -->
         <li class="project__item" style="cursor: pointer; position: relative;">
 
-          <img src="/assets/images/capstone.jpg" alt="Generated Image" class="project__image">
+          <img src="/assets/images/capstone.jpg" alt="Project/Experience Card | Charles Adrian" class="project__image">
           <div class="card-content">
             <h2 class="card-title">FireGuard: A Fire and Smoke Detecting
               Robot</h2>
