--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="biot">
-      <p class="header__bio" style="margin-top: 2.5em;">Future engineer shaping tomorrow's skylines.</p>
+      <p class="header__bio">Future engineer shaping tomorrow's skylines.</p>
     </div>
 
     <nav>
@@ -391,7 +391,13 @@
                 achievements and connections.</p>
               <span class="date"
                 style="font-size: 0.7rem; position: absolute; right: 1.2%; padding-right: 3%; bottom: 4%; ">
-                Jul 20, 2024
+                Jul 20, 2024 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
+                  color="#000000" fill="none">
+                  <path d="M20.0001 11.9998L4.00012 11.9998" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M15.0003 17C15.0003 17 20.0002 13.3176 20.0002 12C20.0002 10.6824 15.0002 7 15.0002 7"
+                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
               </span>
             </div>
           </a>
@@ -411,7 +417,13 @@
                 her transition into adulthood.</p>
               <span class="date"
                 style="font-size: 0.7rem; position: absolute; right: 1.2%; padding-right: 3%; bottom: 4%; ">
-                Mar 12, 2024
+                Mar 12, 2024 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
+                  color="#000000" fill="none">
+                  <path d="M20.0001 11.9998L4.00012 11.9998" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M15.0003 17C15.0003 17 20.0002 13.3176 20.0002 12C20.0002 10.6824 15.0002 7 15.0002 7"
+                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
               </span>
             </div>
           </a>
@@ -453,6 +465,12 @@
               <span class="date"
                 style="font-size: 0.7rem; position: absolute; right: 1.2%; padding-right: 3%; bottom: 4%; ">
                 COMING SOON
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" color="#000000" fill="none">
+                  <path d="M20.0001 11.9998L4.00012 11.9998" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M15.0003 17C15.0003 17 20.0002 13.3176 20.0002 12C20.0002 10.6824 15.0002 7 15.0002 7" stroke="currentColor"
+                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg> -->
               </span>
             </div>
           </a>
@@ -465,14 +483,21 @@
             <img src="/assets/images/Experience1.jpg" alt="Project/Experience Card | Charles Adrian"
               class="project__image">
             <div class="card-content">
-              <h2 class="card-title">3rd Place – The Hillside Echo Photography Contest</h2>
+              <h2 class="card-title">The Hillside Echo Photography Contest</h2>
               <div class="dividerh"></div>
               <p style="text-decoration: none;" class="card-description">Placed 3rd in a photography contest organized
                 by The
-                Hillside Echo, Filamer Christian University's publication.</p>
+                Hillside Echo.</p>
               <span class="date"
                 style="font-size: 0.7rem; position: absolute; right: 1.2%; padding-right: 3%; bottom: 4%;">
                 Mar 14, 2024
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" color="#000000"
+                  fill="none">
+                  <path d="M20.0001 11.9998L4.00012 11.9998" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M15.0003 17C15.0003 17 20.0002 13.3176 20.0002 12C20.0002 10.6824 15.0002 7 15.0002 7"
+                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
               </span>
             </div>
           </a>
@@ -495,6 +520,13 @@
               <span class="date"
                 style="font-size: 0.7rem; position: absolute; right: 1.2%; padding-right: 3%; bottom: 4%;  ">
                 Nov 13, 2023
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" color="#000000"
+                  fill="none">
+                  <path d="M20.0001 11.9998L4.00012 11.9998" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M15.0003 17C15.0003 17 20.0002 13.3176 20.0002 12C20.0002 10.6824 15.0002 7 15.0002 7"
+                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
               </span>
             </div>
           </a>
@@ -516,6 +548,10 @@
             <span class="date"
               style="font-size: 0.7rem; position: absolute; right: 1.2%; padding-right: 3%; bottom: 4%; ">
               May 4, 2024
+              <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" color="#000000" fill="none">
+    <path d="M20.0001 11.9998L4.00012 11.9998" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+    <path d="M15.0003 17C15.0003 17 20.0002 13.3176 20.0002 12C20.0002 10.6824 15.0002 7 15.0002 7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+</svg> -->
             </span>
           </div>
         </li>
