--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
 
         <div class="divider"></div>
 
-        <a href="#" id="light__mode"><svg class="sun" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="25"
-            height="25" color="#c2c6cb" fill="none">
+        <a href="#" id="light__mode" onclick="toggleIcon()"><svg class="sun" id="iconSvg"
+            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="25" height="25" color="#c2c6cb" fill="none">
             <path
               d="M17 12C17 14.7614 14.7614 17 12 17C9.23858 17 7 14.7614 7 12C7 9.23858 9.23858 7 12 7C14.7614 7 17 9.23858 17 12Z"
               stroke="currentColor" stroke-width="1.5" />
@@ -448,7 +448,7 @@
         may not have an experience yet. However, here's
         what I can share about my educational journey:</p>
 
-      <ul class="projects__list ">
+      <ul class="experience__list ">
 
 
         <li class="project__item" style="position: relative;">
