--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <title>Charles Adrian - Portfolio</title>
   <script src="https://kit.fontawesome.com/aedc045876.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6799110621697165"
+    crossorigin="anonymous"></script>
 
   <style>
 
