--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6799110621697165"
     crossorigin="anonymous"></script>
 
+
   <style>
 
   </style>
@@ -453,7 +454,7 @@
       <ul class="experience__list ">
 
 
-        <li class="project__item" style="position: relative;">
+        <!-- <li class="project__item" style="position: relative;">
 
           <a href="#" target="_blank" style="text-decoration: none; cursor: pointer;">
 
@@ -467,16 +468,10 @@
               <span class="date"
                 style="font-size: 0.7rem; position: absolute; right: 1.2%; padding-right: 3%; bottom: 4%; ">
                 COMING SOON
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" color="#000000" fill="none">
-                  <path d="M20.0001 11.9998L4.00012 11.9998" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-                  <path d="M15.0003 17C15.0003 17 20.0002 13.3176 20.0002 12C20.0002 10.6824 15.0002 7 15.0002 7" stroke="currentColor"
-                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                </svg> -->
               </span>
             </div>
           </a>
-        </li>
+        </li> -->
 
 
         <li class="project__item" style="position: relative;">
@@ -543,7 +538,7 @@
             <h2 class="card-title">FireGuard: A Fire and Smoke Detecting
               Robot</h2>
             <div class="dividerh"></div>
-            <p style="text-decoration: none;" class="card-description">A
+            <p style="text-decoration: none;" class="card-description">Built and coded a
               robot that detects fires, senses gas leaks,
               alerts users, and extinguishes flames with a water
               pump.</p>
