--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       </div>
     </div>
 
-    <div class="biot">
+    <!-- <div class="biot">
       <p class="header__bio">Future engineer shaping tomorrow's skylines.</p>
-    </div>
+    </div> -->
 
     <nav>
       <ul class="nav__links">
