--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     </nav>
     <div class="social__icons">
-      <a href="https://m.me/psykwicc" target="_blank">
+      <a href="https://m.me/driyqnn" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" color="#c2c6cb" fill="none">
           <path
             d="M7 14L8.9954 11.6055C9.63153 10.8422 9.9496 10.4605 10.3333 10.4605C10.7171 10.4605 11.0351 10.8422 11.6713 11.6055L12.3287 12.3945C12.9649 13.1578 13.2829 13.5395 13.6667 13.5395C14.0504 13.5395 14.3685 13.1578 15.0046 12.3945L17 10"
@@ -83,7 +83,7 @@
         </svg>
       </a>
 
-      <a href="http://instagram.com/psykwicc" target="_blank">
+      <a href="http://instagram.com/driyqnn" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" color="#c2c6cb" fill="none">
           <path
             d="M2.5 12C2.5 7.52166 2.5 5.28249 3.89124 3.89124C5.28249 2.5 7.52166 2.5 12 2.5C16.4783 2.5 18.7175 2.5 20.1088 3.89124C21.5 5.28249 21.5 7.52166 21.5 12C21.5 16.4783 21.5 18.7175 20.1088 20.1088C18.7175 21.5 16.4783 21.5 12 21.5C7.52166 21.5 5.28249 21.5 3.89124 20.1088C2.5 18.7175 2.5 16.4783 2.5 12Z"
@@ -96,7 +96,7 @@
         </svg>
       </a>
 
-      <a href="https://t.me/psykwicc" target="_blank">
+      <a href="https://t.me/driyqnn" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" color="#c2c6cb" fill="none">
           <path
             d="M11.9854 15.4083L15.2268 19.0936C16.4277 20.4589 17.0282 21.1416 17.6567 20.9754C18.2852 20.8092 18.5008 19.9108 18.9318 18.1138L21.3229 8.1459C21.9868 5.37832 22.3187 3.99454 21.5808 3.312C20.843 2.62947 19.564 3.13725 17.0061 4.15282L5.13876 8.86449C3.09293 9.67674 2.07001 10.0829 2.00507 10.7808C1.99842 10.8522 1.99831 10.9241 2.00474 10.9955C2.06754 11.6937 3.08921 12.1033 5.13255 12.9223C6.05838 13.2934 6.5213 13.479 6.8532 13.8344C6.89052 13.8743 6.9264 13.9157 6.96078 13.9584C7.26658 14.3384 7.39709 14.8371 7.65808 15.8344L8.14653 17.701C8.4005 18.6715 8.52749 19.1568 8.86008 19.223C9.19267 19.2891 9.48225 18.8867 10.0614 18.0819L11.9854 15.4083ZM11.9854 15.4083L11.6676 15.0771C11.3059 14.7001 11.1251 14.5117 11.1251 14.2775C11.1251 14.0433 11.3059 13.8548 11.6676 13.4778L15.2406 9.75409"
@@ -104,7 +104,7 @@
         </svg>
       </a>
 
-      <a href="https://github.com/psykwicc" target="_blank">
+      <a href="https://github.com/driyqnn" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" color="#c2c6cb" fill="none">
           <path d="M10 20.5675C6.57143 21.7248 3.71429 20.5675 2 17" stroke="currentColor" stroke-width="1.5"
             stroke-linecap="round" stroke-linejoin="round" />
@@ -153,7 +153,7 @@
         <div class="divider"></div>
 
         <!-- MESS -->
-        <a href="https://m.me/psykwicc" target="_blank"><svg class="svg" xmlns="http://www.w3.org/2000/svg"
+        <a href="https://m.me/driyqnn" target="_blank"><svg class="svg" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24" width="20" height="20" color="#c2c6cb" fill="none">
             <path
               d="M7 14L8.9954 11.6055C9.63153 10.8422 9.9496 10.4605 10.3333 10.4605C10.7171 10.4605 11.0351 10.8422 11.6713 11.6055L12.3287 12.3945C12.9649 13.1578 13.2829 13.5395 13.6667 13.5395C14.0504 13.5395 14.3685 13.1578 15.0046 12.3945L17 10"
@@ -164,7 +164,7 @@
           </svg></a>
 
         <!-- IG -->
-        <a href="http://instagram.com/psykwicc" target="_blank"><svg class="svg" xmlns="http://www.w3.org/2000/svg"
+        <a href="http://instagram.com/driyqnn" target="_blank"><svg class="svg" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24" width="20" height="20" color="#c2c6cb" fill="none">
             <path
               d="M2.5 12C2.5 7.52166 2.5 5.28249 3.89124 3.89124C5.28249 2.5 7.52166 2.5 12 2.5C16.4783 2.5 18.7175 2.5 20.1088 3.89124C21.5 5.28249 21.5 7.52166 21.5 12C21.5 16.4783 21.5 18.7175 20.1088 20.1088C18.7175 21.5 16.4783 21.5 12 21.5C7.52166 21.5 5.28249 21.5 3.89124 20.1088C2.5 18.7175 2.5 16.4783 2.5 12Z"
@@ -177,7 +177,7 @@
           </svg></a>
 
         <!-- tg -->
-        <a href="https://t.me/psykwicc" target="_blank"><svg class="svg" xmlns="http://www.w3.org/2000/svg"
+        <a href="https://t.me/driyqnn" target="_blank"><svg class="svg" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24" width="20" height="20" color="#c2c6cb" fill="none">
             <path
               d="M11.9854 15.4083L15.2268 19.0936C16.4277 20.4589 17.0282 21.1416 17.6567 20.9754C18.2852 20.8092 18.5008 19.9108 18.9318 18.1138L21.3229 8.1459C21.9868 5.37832 22.3187 3.99454 21.5808 3.312C20.843 2.62947 19.564 3.13725 17.0061 4.15282L5.13876 8.86449C3.09293 9.67674 2.07001 10.0829 2.00507 10.7808C1.99842 10.8522 1.99831 10.9241 2.00474 10.9955C2.06754 11.6937 3.08921 12.1033 5.13255 12.9223C6.05838 13.2934 6.5213 13.479 6.8532 13.8344C6.89052 13.8743 6.9264 13.9157 6.96078 13.9584C7.26658 14.3384 7.39709 14.8371 7.65808 15.8344L8.14653 17.701C8.4005 18.6715 8.52749 19.1568 8.86008 19.223C9.19267 19.2891 9.48225 18.8867 10.0614 18.0819L11.9854 15.4083ZM11.9854 15.4083L11.6676 15.0771C11.3059 14.7001 11.1251 14.5117 11.1251 14.2775C11.1251 14.0433 11.3059 13.8548 11.6676 13.4778L15.2406 9.75409"
@@ -185,7 +185,7 @@
           </svg></a>
 
         <!-- gh -->
-        <a href="https://github.com/psykwicc" target="_blank"><svg class="svg" xmlns="http://www.w3.org/2000/svg"
+        <a href="https://github.com/driyqnn" target="_blank"><svg class="svg" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24" width="20" height="20" color="#c2c6cb" fill="none">
             <path d="M10 20.5675C6.57143 21.7248 3.71429 20.5675 2 17" stroke="currentColor" stroke-width="1.5"
               stroke-linecap="round" stroke-linejoin="round" />
